# scrollwheelfix-NG

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  vcpkg.json
src/: Hooks.cpp  Hooks.h  main.cpp
